Attempt to fix sidenav on mobile

--- a/notetaker-frontend/src/styles.sass
+++ b/notetaker-frontend/src/styles.sass
@@ -11,6 +11,10 @@ $navbar-height: 60px
 .small-margin-left
   margin-left: 1rem
 
+.sidenav
+  .double-padding-left
+    padding-left: 2rem !important
+
 .small-margin-right
   margin-right: 1rem
 
